gcc-14.2.0/gcc/testsuite/gdc.test/compilable/shortened_methods.d
version https://git-lfs.github.com/spec/v1
oid sha256:74316098d545588ad3c1fb701e59c128b4b6b82ad1166551b35ba7c5adcaeb07
size 914
